// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`markBefore renders 0 1`] = `
Array [
  .c0 {
  mark-before: 0;
}

<div
    className="c0"
  />,
  .c0 {
  mark-before: 0;
}

<div
    className="c0"
  />,
  .c0 {
  mark-before: 0;
}

<div
    className="c0"
  />,
  .c0 {
  mark-before: 0;
}

<div
    className="c0"
  />,
]
`;

exports[`markBefore renders function 1`] = `
Array [
  .c0 {
  mark-before: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  mark-before: has;
}

<div
    className="c0"
  />,
  .c0 {
  mark-before: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  mark-before: has;
}

<div
    className="c0"
  />,
]
`;

exports[`markBefore renders invalid theme path 1`] = `
Array [
  .c0 {
  mark-before: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  mark-before: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  mark-before: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  mark-before: invalid.path.1;
}

<div
    className="c0"
  />,
]
`;

exports[`markBefore renders negative number 1`] = `
Array [
  .c0 {
  mark-before: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  mark-before: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  mark-before: -42365;
}

<div
    className="c0"
  />,
  .c0 {
  mark-before: -42365;
}

<div
    className="c0"
  />,
]
`;

exports[`markBefore renders object [breakpoints] 1`] = `
Array [
  @media screen and (min-width:November) {
  .c0 {
    mark-before: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    mark-before: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    mark-before: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    mark-before: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {
  .c0 {
    mark-before: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    mark-before: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    mark-before: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    mark-before: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    mark-before: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    mark-before: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    mark-before: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    mark-before: November;
  }
}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    mark-before: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    mark-before: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    mark-before: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    mark-before: November;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`markBefore renders object [breakpoints] 2`] = `
Array [
  @media May {
  .c0 {
    mark-before: July;
  }
}

@media April {
  .c0 {
    mark-before: August;
  }
}

@media January {
  .c0 {
    mark-before: September;
  }
}

@media April {
  .c0 {
    mark-before: November;
  }
}

@media June {
  .c0 {
    mark-before: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {
  .c0 {
    mark-before: July;
  }
}

@media April {
  .c0 {
    mark-before: August;
  }
}

@media January {
  .c0 {
    mark-before: September;
  }
}

@media April {
  .c0 {
    mark-before: November;
  }
}

@media June {
  .c0 {
    mark-before: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    mark-before: January;
  }
}

@media April {
  .c0 {
    mark-before: December;
  }
}

@media January {
  .c0 {
    mark-before: April;
  }
}

@media April {
  .c0 {
    mark-before: May;
  }
}

@media June {
  .c0 {
    mark-before: June;
  }
}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    mark-before: January;
  }
}

@media April {
  .c0 {
    mark-before: December;
  }
}

@media January {
  .c0 {
    mark-before: April;
  }
}

@media April {
  .c0 {
    mark-before: May;
  }
}

@media June {
  .c0 {
    mark-before: June;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`markBefore renders postitive number 1`] = `
Array [
  .c0 {
  mark-before: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  mark-before: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  mark-before: 42365;
}

<div
    className="c0"
  />,
  .c0 {
  mark-before: 42365;
}

<div
    className="c0"
  />,
]
`;

exports[`markBefore renders string 1`] = `
Array [
  .c0 {
  mark-before: July;
}

<div
    className="c0"
  />,
  .c0 {
  mark-before: July;
}

<div
    className="c0"
  />,
  .c0 {
  mark-before: June;
}

<div
    className="c0"
  />,
  .c0 {
  mark-before: June;
}

<div
    className="c0"
  />,
]
`;

exports[`markBefore renders valid theme path 1`] = `
Array [
  .c0 {
  mark-before: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  mark-before: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  mark-before: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  mark-before: DarkSlateBlue;
}

<div
    className="c0"
  />,
]
`;
